Fixed bug where calculatePoints returned a defunct integer. Now it returns a function integer.